<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20px"
    android:layout_marginBottom="20px"
    android:layout_marginLeft="20px"
    android:layout_marginRight="20px"
    android:orientation="vertical"
    tools:context=".Details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wellcome"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:enabled="false"
                android:textColor="@color/colorPrimary"
                android:text="@string/contact1"
                android:id="@+id/edtUser"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_list_users"/>
            <ListView
                android:id="@+id/lvContacts"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>